--- a/manifest.yml
+++ b/manifest.yml
@@ -12,7 +12,7 @@ modules:
       handler: index.handler
 resources:
   - key: main
-    path: static/hello-world/build
+    path: static/build
 permissions:
   scopes:
     - read:jira-work
