--- a/manifest.yml
+++ b/manifest.yml
@@ -5,7 +5,7 @@ modules:
       resolver:
         function: resolver
       viewportSize: medium
-      title: Custom UI V1
+      title: AI Tester
       icon: https://developer.atlassian.com/platform/forge/images/issue-panel-icon.svg
   function:
     - key: resolver
